--- a/src/frontend/codelearning-frontend/src/app/features/courses/course-editor/course-editor.component.html
+++ b/src/frontend/codelearning-frontend/src/app/features/courses/course-editor/course-editor.component.html
@@ -96,7 +96,7 @@
       } @else {
         <div>
           <h3 class="mb-2 text-lg font-semibold text-gray-900">{{ course()!.title }}</h3>
-          <p class="text-gray-700">{{ course()!.description }}</p>
+          <div class="text-gray-700 markdown-content" [innerHTML]="renderDescription(course()!.description)"></div>
         </div>
       }
     </div>
